[package]
name = "jacktrip-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ringbuf = "0.3"
clap = { version = "4.0", features = ["derive"] }
signal-hook = { version = "0.3.15", features = ["extended-siginfo"] }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.15.0", features = ["asio"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
cpal = { version = "0.15.0", features = ["jack"] }

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.15.0"
